fix experience page on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  overflow-x: hidden;
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -146,6 +138,7 @@ h2 {
   font-size: 3rem;
   display: flex;
   justify-content: center;
+  text-align: center;
   padding-top: 2rem;
 }
 
@@ -280,7 +273,7 @@ h2 {
   display: flex;
   align-items: center;
   position: relative;
-  width: 80vw;
+  width: 85vw;
   height: auto;
   margin: 5vh;
   padding: 3vh 3vw;
@@ -387,10 +380,10 @@ h2 {
 
 .experience-container {
   justify-content: space-between;
+  align-items: center;
   position: relative;
-  width: 70vw;
   margin: 5vh;
-  padding: 3vh 3vw;
+  padding: 3vh 4vw;
   border: solid white;
   border-radius: 10px;
   transform: translateY(-20px);
